definition of a streak, also time granularity

--- a/views/rules.haml
+++ b/views/rules.haml
@@ -14,6 +14,9 @@
           exploiting memory-corrupting bugs). If we catch you, we'll disqualify
           you. However, things like pudding farming and bones stuffing is all
           fair play.
+        %p
+          Streaks are sequences of non-overlapping games played on a single
+          game server account, with no games in-between.
         .text_content.non_top_post
         %p
           The score for competitions and clan competitions is calculated as
@@ -36,7 +39,7 @@
               The "fastest gametime ascension" competition has turn
               granularity; the "fastest realtime ascension" competition
               considers the elapsed time to be the delta between start time
-              and end time.
+              and end time, with second granularity.
             %li
               The "lowest scoring ascension" competition ignores the depth
               of the dungeon - the bonus points for the depth are ignored in
