info text and better error handling for adding accounts

--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -426,7 +426,12 @@ input[type="submit"].small_button {
     height: auto;
     width: auto;
     margin: 2px;
-    padding: 0;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+td  {
+    vertical-align: middle;
 }
 
 /**************************
