Fix a small typo and add a short paragraph that links to the rules page from the about page.

--- a/views/about.haml
+++ b/views/about.haml
@@ -6,8 +6,11 @@
         at UTC midnight (running through all of 16th) and ends at August 14th
         (also running through all of 14th).
       %p
-        NetHack is a classic roguelike game. If you don't what is is, try using
+        NetHack is a classic roguelike game. If you don't what that is, try using
         a Google search.
+      %p
+        You can check out tournament rules from the
+        %a{:href => "/rules"} rules page.
       %p
         This tournament utilizes existing public NetHack servers, such as
         %a{:href => "http://alt.org/nethack"} nethack.alt.org.
