Trophy display on user page

--- a/views/_user_games.haml
+++ b/views/_user_games.haml
@@ -2,6 +2,7 @@
   %h3
     Competition
   - @userscore.variants.each do |variant, variant_name|
+    - @variant = variant
     %h4= variant_name
     .scorelisting
       %table
@@ -29,6 +30,7 @@
         %tr#cell1
           %td Longest ascension streak
           %td.table_number= h @userscore.longest_ascension_streak variant
+    =haml :_user_trophies
 
 .text_content.non_top_post
   %h3
