--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -69,6 +69,9 @@ a:hover {
 /* topnav */
 .text_content_wrapper, #topnav {
     background-color: #ddd;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
 }
 #topnav li a {
     color: #555;
@@ -245,6 +248,9 @@ a:hover {
     -webkit-box-shadow: inset 0px 0px 10px #888;
     -moz-box-shadow: inset 0px 0px 10px #888;
     box-shadow: inset 0px 0px 10px #888;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
     filter:alpha(opacity=90); 
     -moz-opacity: 0.9; 
     opacity: 0.9; 
