Change wording on rules page a bit.

--- a/views/rules.haml
+++ b/views/rules.haml
@@ -12,8 +12,8 @@
           (examples of cheating include hacking a server to add fake games,
           abusing PRNG vulnerabilities to predict the future state of a game,
           exploiting memory-corrupting bugs). If we catch you, we'll disqualify
-          you. However, things like pudding farming and bones stuffing is all
-          fair play.
+          you. However, we don't consider some things such as pudding farming
+          or bones stuffing to be cheating. Use common sense.
         %p
           Streaks are sequences of non-overlapping games played on a single
           game server account, with no games in-between.
