--- a/views/home.haml
+++ b/views/home.haml
@@ -75,3 +75,4 @@
                     %label{:for => "clanname"} Clan name
                     %input#clanname{:name => "clanname", :type => "text"}
                     %input{:type => "submit", :value => "Create clan"}
+                    %span.clear
