clan creation form now displays more nicely

--- a/views/home.haml
+++ b/views/home.haml
@@ -75,4 +75,5 @@
                     %label{:for => "clanname"} Clan name
                     %input#clanname{:name => "clanname", :type => "text"}
                     %input{:type => "submit", :value => "Create clan"}
-                    %span.clear
+                    %span#end_of_content_spacer.clear
+
