--- a/views/home.haml
+++ b/views/home.haml
@@ -40,6 +40,8 @@
                     - if account.clan
                         %a{:href => "/clan/#{account.clan.name}"}= account.clan.name
                         %a{:href => "/leaveclan/#{account.server.id}"} Leave
+                        - if account != @user.accounts.last
+                            %span#small_content_spacer.clear
                     - else
                         - unless account.invitations and account.invitations.empty?
                             %h4
