--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -496,4 +496,7 @@ input[type="submit"].small_button {
 #end_of_content_spacer {
     height: 30px;
 }
+#small_content_spacer {
+    height: 15px;
+}
 
