Add the tiny images to the trophy page. More work to be done (ascension icon probably wrong, multi-line descriptions.)

--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -499,4 +499,6 @@ input[type="submit"].small_button {
 #small_content_spacer {
     height: 15px;
 }
-
+#tiny_content_spacer {
+    height: 5px;
+}
