Fix display of multiline trophy descriptions. Does this break other things?

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -15,8 +15,8 @@
             %span
               All conducts: follow each conduct in at least one ascension.
             %span#tiny_content_spacer.clear
-          %li
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/streak-conducts.png"}
+          %li#multiline
+            %img{:style => "width:5%;height:5%", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/streak-conducts.png"}
             %span
               All conducts (in a streak): follow each conduct in at least one
               ascension, with all the ascensions belonging to the same streak.
