--- a/views/home.haml
+++ b/views/home.haml
@@ -32,50 +32,33 @@
                                 %td.noborder
                                     %input{:type => "submit", :value => "add account", :class => "small_button"}
 
-        =haml :_user_games
-        #clanmanager.text_content.non_top_post
+            =haml :_user_games
+            #clanmanager
             - for account in @user.accounts
                 .account-clan
-                    %h3= account.name + " on " + account.server.name
+                    %div= account.name + " on " + account.server.name
                     - if account.clan
-                        %a{:href => "/clan/#{account.clan.name}"}= account.clan.name
+                        %span= account.clan.name
                         %a{:href => "/leaveclan/#{account.server.id}"} Leave
-                        - if account != @user.accounts.last
-                            %span#small_content_spacer.clear
                     - else
                         - unless account.invitations and account.invitations.empty?
-                            %h4
-                                You got
-                                = account.invitations.length
-                                invitation(s)
-                            .scorelisting
-                                %table
-                                    %tr
-                                        %th Clan
-                                        %th Accept 
-                                        %th Decline
-                                        - for invitation in account.invitations
-                                            %tr
-                                                %td= invitation['clan_id']
-                                                %td
-                                                    %a{:href => "/respond/#{account.server.id}/#{invitation['token']}?accept=true"} Accept
-                                                %td
-                                                    %a{:href => "/respond/#{account.server.id}/#{invitation['token']}?accept=false"} Decline
+                            %table
+                                %tr
+                                    %th Clan
+                                    %th
+                                    %th
+                                    - for invitation in account.invitations
+                                        %tr
+                                            %td= invitation['clan_id']
+                                        %tr
+                                            %td
+                                                %a{:href => "/respond/#{account.server.id}/#{invitation['token']}?accept=true"}
+                                            %td
+                                                %a{:href => "/respond/#{invitation['token']}?accept=false"}
                         - else
-                            %h4
-                                No invitations for this account
-        - clanless_accs = @user.accounts.select{|a| a.clan.nil?}
-        - unless clanless_accs.empty?
-            %div.text_content.non_top_post
-                %h4 Create a new clan
-                %form{:method => "POST", :action => "/clan"}
-                    %label{:for => "server"}  Creator account
-                    %select{:name => "server"}
-                        - for acc in clanless_accs
-                            %option{:value => acc.server.id}= "#{acc.name} on #{acc.server.name}"
-
-                    %label{:for => "clanname"} Clan name
-                    %input#clanname{:name => "clanname", :type => "text"}
-                    %input{:type => "submit", :value => "Create clan"}
-                    %span#end_of_content_spacer.clear
-
+                            %div 
+                                No clan invitations for this account
+                                %form{:method => "POST", :action => "/create_clan/#{account.server.id}"}
+                                    %label{:for => "clanname"} Clan name
+                                    %input#clanname{:type => "text"}
+                                    %input{:type => "submit", :value => "Create clan"} 
