Add the rest of the trophies with icons. Whew.

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -6,6 +6,26 @@
       %p
         %h2
           Trophies
+        %h3
+          Individual
+        %p
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/sightseeing.png"}
+            %span
+              Sightseeing tour: finish a game in all variants (die or ascend)
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/globetrotter.png"}
+            %span
+              Globetrotter: get a trophy for each variant
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/king.png"}
+            %span
+              King of the world: ascend in all variants
+        .text_content.non_top_post
+        %h3
+          All Variants
         %p
           These trophies apply separately to each variant (excluding NetHack
           1.3d). Each is worth one point.
@@ -68,7 +88,7 @@
               starting gender is considered).
             %span#tiny_content_spacer.clear
           %li
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/king.png"}
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/ascension.png"}
             %span
               Ascension: ascend a character.
             %span#tiny_content_spacer.clear
@@ -130,6 +150,138 @@
                 %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-astral.png"}
                 %span
                   enter the Astral Plane
+        .text_content.non_top_post
+        %h3
+          AceHack and UnNetHack
+        %p
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-croesus.png"}
+            %span
+              Assault on Fort Knox: defeat Croesus
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-sam.png"}
+            %span
+              No membership card: defeat One-Eyed Sam (UnNetHack only)
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-no-nemesis.png"}
+            %span
+              Too good for quests: ascend without defeating the quest nemesis
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-no-vlad.png"}
+            %span
+              Too good for Vladbanes: ascend without defeating Vlad
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-no-wizard.png"}
+            %span
+              Too good for... wait, what? How?: ascend without defeating Rodney
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-no-cthulhu.png"}
+            %span
+              Too good for a brain: ascend without defeating Cthulhu (UnNetHack only)
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-hoarder.png"}
+            %span
+              Hoarder: ascend carrying all the invocation items
+        .text_content.non_top_post
+        %h3
+          Nethack 1.3d
+        %p
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/sightseeing.png"}
+            %span 
+              Ascension: ascend a character.
+            %span#tiny_content_spacer.clear
+          %li
+            Achievement trophy (each subtrophy is worth an equal fraction of a
+            point):
+            %ul 
+              %li
+                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/old-crowned.png"}
+                %span
+                  get crowned
                 %span#tiny_content_spacer.clear
+              %li
+                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/old-hell.png"}
+                %span
+                  enter Hell
+                %span#tiny_content_spacer.clear
+              %li
+                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/old-wizard.png"}
+                %span
+                  defeat Rodney
+        .text_content.non_top_post
+        %h2         
+          Competitions
+        %h3
+          All Variants
+        %p
+          These competitions apply separately to each variant (excluding NetHack
+          1.3d). First place is awarded 4 points, second place is awarded 3,
+          2 for third place. For others they are awarded (winner's score/
+          player's score) swapping for fastest ascension and lowest score.
+        %p
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-most-ascensions.png"}
+            %span
+              Most ascensions
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-longest-streak.png"}
+            %span
+              Longest ascension streak
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-fastest-gametime.png"}
+            %span
+              Fastest ascension (gametime)
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-fastest-realtime.png"}
+            %span
+              Fastest ascension (realtime)
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-highest-score.png"}
+            %span
+              Highest scoring ascension
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-lowest-score.png"}
+            %span
+              Lowest scoring ascension (modulo depth)
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-most-conducts.png"}
+            %span
+              Most conducts in a single ascension
+        .text_content.non_top_post
+        %h3
+          Clan Competitions
+        %p
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/clan-24h.png"}
+            %span
+              Most ascensions in a 24 hour period
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/clan-combinations.png"}
+            %span
+              Most ascended variant/role/race/alignment/gender combinations (starting)
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/clan-points.png"}
+            %span
+              Most points
+            %span#tiny_content_spacer.clear
+          %li
+            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/clan-deaths.png"}
+            %span
+              Most unique deaths
         .text_content.non_top_post
     %span#end_of_content_spacer.clear
